# asset-pricing-research-lab

./: LICENSE  README.md  pyproject.toml
src/asset_pricing_lab/: __init__.py  black_litterman.py  capm.py  fama_french.py  portfolio.py  returns.py  risk.py  statistics.py  version.py
tests/: test_black_litterman.py  test_capm.py  test_fama_french.py  test_portfolio.py  test_returns.py  test_risk.py  test_statistics.py
tests/tests/: test_statistics.py
